Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19824

Qt screen capture on OSX 10.7 Lion not working

    XMLWordPrintable

Details

    • macOS

    Description

      The screen capturing into a QPixmap works great in OSX10.6, but ceased to work in Lion Dev Preview 4.

      Example:
      QPixmap screenshot = QPixmap::grabWindow(QApplication::desktop()->winId());

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              andysh Andy Shaw
              tasilvol Taito Silvola (Inactive)
              Votes:
              12 Vote for this issue
              Watchers:
              16 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes